// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Reminder renders correctly when bordered 1`] = `
<DocumentFragment>
  .cache-1qcp5n {
  height: 28px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  border-radius: 14px;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #4a4f62;
  font-weight: 400;
  background-color: transparent;
  border: 1px solid #dce1eb;
  -webkit-transition: all .3s ease-in-out;
  transition: all .3s ease-in-out;
}

.cache-1qcp5n.cache-1qcp5n {
  font-size: 12px;
  padding-right: 8px;
  padding-left: 8px;
  padding-top: 8px;
  padding-bottom: 8px;
}

.cache-1qcp5n:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1qcp5n:hover {
  box-shadow: 0 3px 6px #e4edff;
  border: 1px solid #3f6ed8;
}

.cache-1qcp5n strong {
  color: #3f6ed8;
}

.cache-jtfyvj>p {
  display: inline;
}

.cache-h2mt8r {
  fill: #3f6ed8;
  height: 20px;
  width: 20px;
  min-width: 20px;
  min-height: 20px;
}

.cache-h2mt8r.cache-h2mt8r {
  vertical-align: middle;
  margin-left: 4px;
}

<a
    class="e1fipqsu0 cache-1qcp5n e7ah3bn0"
    type="button"
  >
    <div
      class="ejtitxs0 cache-jtfyvj e7ah3bn0"
    >
      <p>
        <span>
          This is a sample Test
        </span>
      </p>
    </div>
    <svg
      class="sc-ui-icon etwatq50 cache-h2mt8r e7ah3bn0"
      viewBox="0 0 24 24"
    >
      <path
        d="M15 5l-1.41 1.41L18.17 11H2v2h16.17l-4.59 4.59L15 19l7-7-7-7z"
      />
    </svg>
  </a>
</DocumentFragment>
`;

exports[`Reminder renders correctly with bold 1`] = `
<DocumentFragment>
  .cache-1qcp5n {
  height: 28px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  border-radius: 14px;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #4a4f62;
  font-weight: 400;
  background-color: transparent;
  border: 1px solid #dce1eb;
  -webkit-transition: all .3s ease-in-out;
  transition: all .3s ease-in-out;
}

.cache-1qcp5n.cache-1qcp5n {
  font-size: 12px;
  padding-right: 8px;
  padding-left: 8px;
  padding-top: 8px;
  padding-bottom: 8px;
}

.cache-1qcp5n:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1qcp5n:hover {
  box-shadow: 0 3px 6px #e4edff;
  border: 1px solid #3f6ed8;
}

.cache-1qcp5n strong {
  color: #3f6ed8;
}

.cache-jtfyvj>p {
  display: inline;
}

.cache-h2mt8r {
  fill: #3f6ed8;
  height: 20px;
  width: 20px;
  min-width: 20px;
  min-height: 20px;
}

.cache-h2mt8r.cache-h2mt8r {
  vertical-align: middle;
  margin-left: 4px;
}

<a
    class="e1fipqsu0 cache-1qcp5n e7ah3bn0"
    type="button"
  >
    <div
      class="ejtitxs0 cache-jtfyvj e7ah3bn0"
    >
      <p>
        <span>
          This is a 
        </span>
        <strong>
          <span>
            bold
          </span>
        </strong>
        <span>
           Test
        </span>
      </p>
    </div>
    <svg
      class="sc-ui-icon etwatq50 cache-h2mt8r e7ah3bn0"
      viewBox="0 0 24 24"
    >
      <path
        d="M15 5l-1.41 1.41L18.17 11H2v2h16.17l-4.59 4.59L15 19l7-7-7-7z"
      />
    </svg>
  </a>
</DocumentFragment>
`;

exports[`Reminder renders correctly with default values 1`] = `
<DocumentFragment>
  .cache-by3y5b {
  height: 28px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  border-radius: 14px;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #4a4f62;
  font-weight: 400;
  background-color: #e4edff;
  border: 1px solid transparent;
  -webkit-transition: all .3s ease-in-out;
  transition: all .3s ease-in-out;
}

.cache-by3y5b.cache-by3y5b {
  font-size: 12px;
  padding-right: 8px;
  padding-left: 8px;
  padding-top: 8px;
  padding-bottom: 8px;
}

.cache-by3y5b:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-by3y5b:hover {
  box-shadow: 0 3px 6px #e4edff;
  border: 1px solid #3f6ed8;
}

.cache-by3y5b strong {
  color: #3f6ed8;
}

.cache-jtfyvj>p {
  display: inline;
}

.cache-h2mt8r {
  fill: #3f6ed8;
  height: 20px;
  width: 20px;
  min-width: 20px;
  min-height: 20px;
}

.cache-h2mt8r.cache-h2mt8r {
  vertical-align: middle;
  margin-left: 4px;
}

<a
    class="e1fipqsu0 cache-by3y5b e7ah3bn0"
    type="button"
  >
    <div
      class="ejtitxs0 cache-jtfyvj e7ah3bn0"
    >
      <p>
        <span>
          This is a sample Test
        </span>
      </p>
    </div>
    <svg
      class="sc-ui-icon etwatq50 cache-h2mt8r e7ah3bn0"
      viewBox="0 0 24 24"
    >
      <path
        d="M15 5l-1.41 1.41L18.17 11H2v2h16.17l-4.59 4.59L15 19l7-7-7-7z"
      />
    </svg>
  </a>
</DocumentFragment>
`;

exports[`Reminder renders correctly with variant 1`] = `
<DocumentFragment>
  .cache-1qcp5n {
  height: 28px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  border-radius: 14px;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #4a4f62;
  font-weight: 400;
  background-color: transparent;
  border: 1px solid #dce1eb;
  -webkit-transition: all .3s ease-in-out;
  transition: all .3s ease-in-out;
}

.cache-1qcp5n.cache-1qcp5n {
  font-size: 12px;
  padding-right: 8px;
  padding-left: 8px;
  padding-top: 8px;
  padding-bottom: 8px;
}

.cache-1qcp5n:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1qcp5n:hover {
  box-shadow: 0 3px 6px #e4edff;
  border: 1px solid #3f6ed8;
}

.cache-1qcp5n strong {
  color: #3f6ed8;
}

.cache-jtfyvj>p {
  display: inline;
}

.cache-h2mt8r {
  fill: #3f6ed8;
  height: 20px;
  width: 20px;
  min-width: 20px;
  min-height: 20px;
}

.cache-h2mt8r.cache-h2mt8r {
  vertical-align: middle;
  margin-left: 4px;
}

<a
    class="e1fipqsu0 cache-1qcp5n e7ah3bn0"
    type="button"
  >
    <div
      class="ejtitxs0 cache-jtfyvj e7ah3bn0"
    >
      <p>
        <span>
          This is a sample Test
        </span>
      </p>
    </div>
    <svg
      class="sc-ui-icon etwatq50 cache-h2mt8r e7ah3bn0"
      viewBox="0 0 24 24"
    >
      <path
        d="M15 5l-1.41 1.41L18.17 11H2v2h16.17l-4.59 4.59L15 19l7-7-7-7z"
      />
    </svg>
  </a>
</DocumentFragment>
`;
